Fix icon used on "New files to scan" popup et al. on NC25
Nextcloud 25 defines its own class `icon-audio` which defines an image
looking like a microphone. This used to override the `icon-audio`
defined by the Music app which looks like the Music application icon
(the double note). What made it worse was that the icon defined by the
core was almost invisible on the dark theme (because its color got
inverted twice).

All icon class style definitions of the Music app are now prefixed with
`.app-music`, making it less likely that they would get overridden by
any definition made by the cloud core.

--- a/css/music-dark-theme.css
+++ b/css/music-dark-theme.css
@@ -38,6 +38,6 @@
 	opacity: 0.9;
 }
 
-.dark-theme .icon-reload {
+.app-music .dark-theme .icon-reload {
 	background-image: url(../img/reload-inverted.svg);
 }
