--- a/css/music-icons.css
+++ b/css/music-icons.css
@@ -7,87 +7,87 @@
  * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
  * @copyright Pauli Järvinen 2022
  */
- 
-.icon-audio {
+
+.app-music .icon-audio {
 	background-image: url(../img/audio.svg);
 }
 
-.icon-radio {
+.app-music .icon-radio {
 	background-image: url(../img/radio.svg);
 }
 
-.icon-play-big {
+.app-music .icon-play-big {
 	background-image: url(../img/play-big.svg);
 }
 
-.icon-pause-big {
+.app-music .icon-pause-big {
 	background-image: url(../img/pause-big.svg);
 }
 
-.icon-stop {
+.app-music .icon-stop {
 	background-image: url(../img/stop.svg);
 }
 
-.icon-skip-prev {
+.app-music .icon-skip-prev {
 	background-image: url(../img/skip-previous.svg);
 }
 
-.icon-skip-next {
+.app-music .icon-skip-next {
 	background-image: url(../img/skip-next.svg);
 }
 
-.icon-time {
+.app-music .icon-time {
 	background-image: url(../img/access-time.svg);
 }
 
-.icon-to-file {
+.app-music .icon-to-file {
 	background-image: url(../img/to-file.svg);
 }
 
-.icon-from-file {
+.app-music .icon-from-file {
 	background-image: url(../img/from-file.svg);
 }
 
-.icon-sort-by-alpha {
+.app-music .icon-sort-by-alpha {
 	background-image: url(../img/sort-by-alpha.svg);
 }
 
-.icon-album {
+.app-music .icon-album {
 	background-image: url(../img/album.svg);
 }
 
-.icon-folder-nav {
+.app-music .icon-folder-nav {
 	background-image: url(../img/folder.svg);
 }
 
-.icon-audiotrack {
+.app-music .icon-audiotrack {
 	background-image: url(../img/audiotrack.svg);
 }
 
-.icon-library-music {
+.app-music .icon-library-music {
 	background-image: url(../img/library-music.svg);
 }
 
-.icon-radio {
+.app-music .icon-radio {
 	background-image: url(../img/radio.svg);
 }
 
-.icon-podcast {
+.app-music .icon-podcast {
 	background-image: url(../img/podcasts.svg);
 }
 
-.icon-reload {
+.app-music .icon-reload {
 	background-image: url(../img/reload.svg);
 }
 
-.icon-radio-button {
+.app-music .icon-radio-button {
 	background-image: url(../img/radio-button.svg);
 }
 
-.icon-radio-button-checked {
+.app-music .icon-radio-button-checked {
 	background-image: url(../img/radio-button-checked.svg);
 }
 
-.icon-playlist {
+.app-music .icon-playlist {
 	background-image: url(../img/playlist-play.svg);
 }
